# Teleportdim-hardware-study

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  RESEARCH_JOURNAL.md  pyproject.toml  requirements-lock.txt  tox.ini
artifacts/fixed_n2/: aer_fixed_n2.csv  aer_n2_compare.csv  aer_n2_compare.md  aer_process_d2.json  aer_process_d3.json  aer_process_d3_delay0_64_128.csv  aer_process_d3_delay0_64_128_fezdt.json  aer_process_d4.csv  aer_process_d4.json  markovian_n2.csv  markovian_n2.json  n2_compare.csv  n2_compare.json  three_lane_n2_compare.csv  three_lane_n2_compare.json  three_lane_n2_compare.md
artifacts/hardware/: ibm_fez_d3_n2_delay0.csv  ibm_fez_d4_n2_delay0.csv  ibm_fez_fixed_n2_delay0_64_128_compare.csv  ibm_fez_fixed_n2_delay0_64_128_compare.json  ibm_fez_fixed_n2_delay0_64_128_compare.md  ibm_fez_fixed_n2_delay0_compare.json  ibm_fez_fixed_n2_delay0_compare.md  ibm_fez_process_d2_n2_delay0_64_128.csv  ibm_fez_process_d2_n2_delay0_64_128.json  ibm_fez_process_d3_n2_delay0_64_128.csv  ibm_fez_process_d3_n2_delay0_64_128.json  ibm_fez_process_fixed_n2_delay0_64_128_compare.csv  ibm_fez_process_fixed_n2_delay0_64_128_compare.md  ibm_fez_vs_aer_process_d3_n2_compare.md
artifacts/non_markovian/: ibm_fez_rtn_calibration_d3_n2.md  random_telegraph_blp_n2.csv  (+2 more)
docs/: hardware_run_notes_ibm_fez.md  teleportdim_channel_body_paper.md  teleportdim_fixed_n_paper.md
examples/: aer_fixed_n_sweep.py  aer_process_tomography.py  channel_body_deformation.py  fixed_n2_comparison.py  hardware_delay_sweep.py  model_fixed_n_sweep.py
tests/: test_aer_parsing.py  test_channel_deformation.py  test_circuit_import_guard.py  test_circuits.py  test_cli.py  test_encoding.py  test_hardware_dependency_resolution.py  test_hardware_validation.py  test_metrics.py  test_model_sweeps.py  test_packaging_metadata.py  test_postprocess.py  test_process_tomography.py  test_reports.py  test_reports_comparison.py  test_runner.py  test_simulation.py  test_sweeps.py  test_tomography.py
(+49 files in other folders)
